set fixed width for form labels to align input fields

--- a/main.css
+++ b/main.css
@@ -94,6 +94,10 @@ body {
 	line-height: 24px;
 }
 
+.main form label {
+	width: 100px;
+}
+
 .main a {
 	text-decoration: underline;
 	color: #0088FF;
